<resources>
<string name="app_name">MyLoginApp</string>
<string name="sign_in">Instagram</string>
<string name="username">Phone number, username or email</string>
<string name="log_in">LOG IN</string>
<string name="forgot_password">Forgot
Password?</string>
<string name="dont_have_account">Don\'t have an
account?</string>
    <string name="login_or">OR</string>
<string name="loginWith">Login with Facebook</string>
<string name="todo">TODO</string>
</resources>



